refactor: general stabilization, technical documentation, and code cleanup
This commit consolidates the project architecture by resolving critical bugs,
standardizing the language, and preparing the codebase for future audits
and production releases.

Detailed changes:
* fix: resolve controller bugs, implement proper PRG (Post-Redirect-Get) pattern, and add null-safe validations (e.g., logo uploads).
* refactor(i18n): translate and standardize nomenclature (static texts, status responses) to maintain semantic consistency.
* docs: implement professional Javadoc in core classes/methods and structural comments in the frontend (HTML/CSS) explaining business rules.
* chore: remove orphaned files, obsolete views, and dead code to reduce technical debt and streamline the project.